--- a/scrap_tac.ipynb
+++ b/scrap_tac.ipynb
@@ -191,543 +191,7 @@
       "Descargando mes 06, año 2009\n",
       "Listo!\n",
       "2009_06 listo\n",
-      "Descargando mes 07, año 2009\n",
-      "Listo!\n",
-      "2009_07 listo\n",
-      "Descargando mes 08, año 2009\n",
-      "Listo!\n",
-      "2009_08 listo\n",
-      "Descargando mes 09, año 2009\n",
-      "Listo!\n",
-      "2009_09 listo\n",
-      "Descargando mes 10, año 2009\n",
-      "Listo!\n",
-      "2009_10 listo\n",
-      "Descargando mes 11, año 2009\n",
-      "Listo!\n",
-      "2009_11 listo\n",
-      "Descargando mes 12, año 2009\n",
-      "Listo!\n",
-      "2009_12 listo\n",
-      "Descargando mes 01, año 2010\n",
-      "Listo!\n",
-      "2010_01 listo\n",
-      "Descargando mes 02, año 2010\n",
-      "Listo!\n",
-      "2010_02 listo\n",
-      "Descargando mes 03, año 2010\n",
-      "Listo!\n",
-      "2010_03 listo\n",
-      "Descargando mes 04, año 2010\n",
-      "Listo!\n",
-      "2010_04 listo\n",
-      "Descargando mes 05, año 2010\n",
-      "Listo!\n",
-      "2010_05 listo\n",
-      "Descargando mes 06, año 2010\n",
-      "Listo!\n",
-      "2010_06 listo\n",
-      "Descargando mes 07, año 2010\n",
-      "Listo!\n",
-      "2010_07 listo\n",
-      "Descargando mes 08, año 2010\n",
-      "Listo!\n",
-      "2010_08 listo\n",
-      "Descargando mes 09, año 2010\n",
-      "Listo!\n",
-      "2010_09 listo\n",
-      "Descargando mes 10, año 2010\n",
-      "Listo!\n",
-      "2010_10 listo\n",
-      "Descargando mes 11, año 2010\n",
-      "Listo!\n",
-      "2010_11 listo\n",
-      "Descargando mes 12, año 2010\n",
-      "Listo!\n",
-      "2010_12 listo\n",
-      "Descargando mes 01, año 2011\n",
-      "Listo!\n",
-      "2011_01 listo\n",
-      "Descargando mes 02, año 2011\n",
-      "Listo!\n",
-      "2011_02 listo\n",
-      "Descargando mes 03, año 2011\n",
-      "Listo!\n",
-      "2011_03 listo\n",
-      "Descargando mes 04, año 2011\n",
-      "Listo!\n",
-      "2011_04 listo\n",
-      "Descargando mes 05, año 2011\n",
-      "Listo!\n",
-      "2011_05 listo\n",
-      "Descargando mes 06, año 2011\n",
-      "Listo!\n",
-      "2011_06 listo\n",
-      "Descargando mes 07, año 2011\n",
-      "Listo!\n",
-      "2011_07 listo\n",
-      "Descargando mes 08, año 2011\n",
-      "Listo!\n",
-      "2011_08 listo\n",
-      "Descargando mes 09, año 2011\n",
-      "Listo!\n",
-      "2011_09 listo\n",
-      "Descargando mes 10, año 2011\n",
-      "Listo!\n",
-      "2011_10 listo\n",
-      "Descargando mes 11, año 2011\n",
-      "Listo!\n",
-      "2011_11 listo\n",
-      "Descargando mes 12, año 2011\n",
-      "Listo!\n",
-      "2011_12 listo\n",
-      "Descargando mes 01, año 2012\n",
-      "Listo!\n",
-      "2012_01 listo\n",
-      "Descargando mes 02, año 2012\n",
-      "Listo!\n",
-      "2012_02 listo\n",
-      "Descargando mes 03, año 2012\n",
-      "Listo!\n",
-      "2012_03 listo\n",
-      "Descargando mes 04, año 2012\n",
-      "Listo!\n",
-      "2012_04 listo\n",
-      "Descargando mes 05, año 2012\n",
-      "Listo!\n",
-      "2012_05 listo\n",
-      "Descargando mes 06, año 2012\n",
-      "Listo!\n",
-      "2012_06 listo\n",
-      "Descargando mes 07, año 2012\n",
-      "Listo!\n",
-      "2012_07 listo\n",
-      "Descargando mes 08, año 2012\n",
-      "Listo!\n",
-      "2012_08 listo\n",
-      "Descargando mes 09, año 2012\n",
-      "Listo!\n",
-      "2012_09 listo\n",
-      "Descargando mes 10, año 2012\n",
-      "Listo!\n",
-      "2012_10 listo\n",
-      "Descargando mes 11, año 2012\n",
-      "Listo!\n",
-      "2012_11 listo\n",
-      "Descargando mes 12, año 2012\n",
-      "Listo!\n",
-      "2012_12 listo\n",
-      "Descargando mes 01, año 2013\n",
-      "Listo!\n",
-      "2013_01 listo\n",
-      "Descargando mes 02, año 2013\n",
-      "Listo!\n",
-      "2013_02 listo\n",
-      "Descargando mes 03, año 2013\n",
-      "Listo!\n",
-      "2013_03 listo\n",
-      "Descargando mes 04, año 2013\n",
-      "Listo!\n",
-      "2013_04 listo\n",
-      "Descargando mes 05, año 2013\n",
-      "Listo!\n",
-      "2013_05 listo\n",
-      "Descargando mes 06, año 2013\n",
-      "Listo!\n",
-      "2013_06 listo\n",
-      "Descargando mes 07, año 2013\n",
-      "Listo!\n",
-      "2013_07 listo\n",
-      "Descargando mes 08, año 2013\n",
-      "Listo!\n",
-      "2013_08 listo\n",
-      "Descargando mes 09, año 2013\n",
-      "Listo!\n",
-      "2013_09 listo\n",
-      "Descargando mes 10, año 2013\n",
-      "Listo!\n",
-      "2013_10 listo\n",
-      "Descargando mes 11, año 2013\n",
-      "Listo!\n",
-      "2013_11 listo\n",
-      "Descargando mes 12, año 2013\n",
-      "Listo!\n",
-      "2013_12 listo\n",
-      "Descargando mes 01, año 2014\n",
-      "Listo!\n",
-      "2014_01 listo\n",
-      "Descargando mes 02, año 2014\n",
-      "Listo!\n",
-      "2014_02 listo\n",
-      "Descargando mes 03, año 2014\n",
-      "Listo!\n",
-      "2014_03 listo\n",
-      "Descargando mes 04, año 2014\n",
-      "Listo!\n",
-      "2014_04 listo\n",
-      "Descargando mes 05, año 2014\n",
-      "Listo!\n",
-      "2014_05 listo\n",
-      "Descargando mes 06, año 2014\n",
-      "Listo!\n",
-      "2014_06 listo\n",
-      "Descargando mes 07, año 2014\n",
-      "Listo!\n",
-      "2014_07 listo\n",
-      "Descargando mes 08, año 2014\n",
-      "Listo!\n",
-      "2014_08 listo\n",
-      "Descargando mes 09, año 2014\n",
-      "Listo!\n",
-      "2014_09 listo\n",
-      "Descargando mes 10, año 2014\n",
-      "Listo!\n",
-      "2014_10 listo\n",
-      "Descargando mes 11, año 2014\n",
-      "Listo!\n",
-      "2014_11 listo\n",
-      "Descargando mes 12, año 2014\n",
-      "Listo!\n",
-      "2014_12 listo\n",
-      "Descargando mes 01, año 2015\n",
-      "Listo!\n",
-      "2015_01 listo\n",
-      "Descargando mes 02, año 2015\n",
-      "Listo!\n",
-      "2015_02 listo\n",
-      "Descargando mes 03, año 2015\n",
-      "Listo!\n",
-      "2015_03 listo\n",
-      "Descargando mes 04, año 2015\n",
-      "Listo!\n",
-      "2015_04 listo\n",
-      "Descargando mes 05, año 2015\n",
-      "Listo!\n",
-      "2015_05 listo\n",
-      "Descargando mes 06, año 2015\n",
-      "Listo!\n",
-      "2015_06 listo\n",
-      "Descargando mes 07, año 2015\n",
-      "Listo!\n",
-      "2015_07 listo\n",
-      "Descargando mes 08, año 2015\n",
-      "Listo!\n",
-      "2015_08 listo\n",
-      "Descargando mes 09, año 2015\n",
-      "Listo!\n",
-      "2015_09 listo\n",
-      "Descargando mes 10, año 2015\n",
-      "Listo!\n",
-      "2015_10 listo\n",
-      "Descargando mes 11, año 2015\n",
-      "Listo!\n",
-      "2015_11 listo\n",
-      "Descargando mes 12, año 2015\n",
-      "Listo!\n",
-      "2015_12 listo\n",
-      "Descargando mes 01, año 2016\n",
-      "Listo!\n",
-      "2016_01 listo\n",
-      "Descargando mes 02, año 2016\n",
-      "Listo!\n",
-      "2016_02 listo\n",
-      "Descargando mes 03, año 2016\n",
-      "Listo!\n",
-      "2016_03 listo\n",
-      "Descargando mes 04, año 2016\n",
-      "Listo!\n",
-      "2016_04 listo\n",
-      "Descargando mes 05, año 2016\n",
-      "Listo!\n",
-      "2016_05 listo\n",
-      "Descargando mes 06, año 2016\n",
-      "Listo!\n",
-      "2016_06 listo\n",
-      "Descargando mes 07, año 2016\n",
-      "Listo!\n",
-      "2016_07 listo\n",
-      "Descargando mes 08, año 2016\n",
-      "Listo!\n",
-      "2016_08 listo\n",
-      "Descargando mes 09, año 2016\n",
-      "Listo!\n",
-      "2016_09 listo\n",
-      "Descargando mes 10, año 2016\n",
-      "Listo!\n",
-      "2016_10 listo\n",
-      "Descargando mes 11, año 2016\n",
-      "Listo!\n",
-      "2016_11 listo\n",
-      "Descargando mes 12, año 2016\n",
-      "Listo!\n",
-      "2016_12 listo\n",
-      "Descargando mes 01, año 2017\n",
-      "Listo!\n",
-      "2017_01 listo\n",
-      "Descargando mes 02, año 2017\n",
-      "Listo!\n",
-      "2017_02 listo\n",
-      "Descargando mes 03, año 2017\n",
-      "Listo!\n",
-      "2017_03 listo\n",
-      "Descargando mes 04, año 2017\n",
-      "Listo!\n",
-      "2017_04 listo\n",
-      "Descargando mes 05, año 2017\n",
-      "Listo!\n",
-      "2017_05 listo\n",
-      "Descargando mes 06, año 2017\n",
-      "Listo!\n",
-      "2017_06 listo\n",
-      "Descargando mes 07, año 2017\n",
-      "Listo!\n",
-      "2017_07 listo\n",
-      "Descargando mes 08, año 2017\n",
-      "Listo!\n",
-      "2017_08 listo\n",
-      "Descargando mes 09, año 2017\n",
-      "Listo!\n",
-      "2017_09 listo\n",
-      "Descargando mes 10, año 2017\n",
-      "Listo!\n",
-      "2017_10 listo\n",
-      "Descargando mes 11, año 2017\n",
-      "Listo!\n",
-      "2017_11 listo\n",
-      "Descargando mes 12, año 2017\n",
-      "Listo!\n",
-      "2017_12 listo\n",
-      "Descargando mes 01, año 2018\n",
-      "Listo!\n",
-      "2018_01 listo\n",
-      "Descargando mes 02, año 2018\n",
-      "Listo!\n",
-      "2018_02 listo\n",
-      "Descargando mes 03, año 2018\n",
-      "Listo!\n",
-      "2018_03 listo\n",
-      "Descargando mes 04, año 2018\n",
-      "Listo!\n",
-      "2018_04 listo\n",
-      "Descargando mes 05, año 2018\n",
-      "Listo!\n",
-      "2018_05 listo\n",
-      "Descargando mes 06, año 2018\n",
-      "Listo!\n",
-      "2018_06 listo\n",
-      "Descargando mes 07, año 2018\n",
-      "Listo!\n",
-      "2018_07 listo\n",
-      "Descargando mes 08, año 2018\n",
-      "Listo!\n",
-      "2018_08 listo\n",
-      "Descargando mes 09, año 2018\n",
-      "Listo!\n",
-      "2018_09 listo\n",
-      "Descargando mes 10, año 2018\n",
-      "Listo!\n",
-      "2018_10 listo\n",
-      "Descargando mes 11, año 2018\n",
-      "Listo!\n",
-      "2018_11 listo\n",
-      "Descargando mes 12, año 2018\n",
-      "Listo!\n",
-      "2018_12 listo\n",
-      "Descargando mes 01, año 2019\n",
-      "Listo!\n",
-      "2019_01 listo\n",
-      "Descargando mes 02, año 2019\n",
-      "Listo!\n",
-      "2019_02 listo\n",
-      "Descargando mes 03, año 2019\n",
-      "Listo!\n",
-      "2019_03 listo\n",
-      "Descargando mes 04, año 2019\n",
-      "Listo!\n",
-      "2019_04 listo\n",
-      "Descargando mes 05, año 2019\n",
-      "Listo!\n",
-      "2019_05 listo\n",
-      "Descargando mes 06, año 2019\n",
-      "Listo!\n",
-      "2019_06 listo\n",
-      "Descargando mes 07, año 2019\n",
-      "Listo!\n",
-      "2019_07 listo\n",
-      "Descargando mes 08, año 2019\n",
-      "Listo!\n",
-      "2019_08 listo\n",
-      "Descargando mes 09, año 2019\n",
-      "Listo!\n",
-      "2019_09 listo\n",
-      "Descargando mes 10, año 2019\n",
-      "Listo!\n",
-      "2019_10 listo\n",
-      "Descargando mes 11, año 2019\n",
-      "Listo!\n",
-      "2019_11 listo\n",
-      "Descargando mes 12, año 2019\n",
-      "Listo!\n",
-      "2019_12 listo\n",
-      "Descargando mes 01, año 2020\n",
-      "Listo!\n",
-      "2020_01 listo\n",
-      "Descargando mes 02, año 2020\n",
-      "Listo!\n",
-      "2020_02 listo\n",
-      "Descargando mes 03, año 2020\n",
-      "Listo!\n",
-      "2020_03 listo\n",
-      "Descargando mes 04, año 2020\n",
-      "Listo!\n",
-      "2020_04 listo\n",
-      "Descargando mes 05, año 2020\n",
-      "Listo!\n",
-      "2020_05 listo\n",
-      "Descargando mes 06, año 2020\n",
-      "Listo!\n",
-      "2020_06 listo\n",
-      "Descargando mes 07, año 2020\n",
-      "Listo!\n",
-      "2020_07 listo\n",
-      "Descargando mes 08, año 2020\n",
-      "Listo!\n",
-      "2020_08 listo\n",
-      "Descargando mes 09, año 2020\n",
-      "Listo!\n",
-      "2020_09 listo\n",
-      "Descargando mes 10, año 2020\n",
-      "Listo!\n",
-      "2020_10 listo\n",
-      "Descargando mes 11, año 2020\n",
-      "Listo!\n",
-      "2020_11 listo\n",
-      "Descargando mes 12, año 2020\n",
-      "Listo!\n",
-      "2020_12 listo\n",
-      "Descargando mes 01, año 2021\n",
-      "Listo!\n",
-      "2021_01 listo\n",
-      "Descargando mes 02, año 2021\n",
-      "Listo!\n",
-      "2021_02 listo\n",
-      "Descargando mes 03, año 2021\n",
-      "Listo!\n",
-      "2021_03 listo\n",
-      "Descargando mes 04, año 2021\n",
-      "Listo!\n",
-      "2021_04 listo\n",
-      "Descargando mes 05, año 2021\n",
-      "Listo!\n",
-      "2021_05 listo\n",
-      "Descargando mes 06, año 2021\n",
-      "Listo!\n",
-      "2021_06 listo\n",
-      "Descargando mes 07, año 2021\n",
-      "Listo!\n",
-      "2021_07 listo\n",
-      "Descargando mes 08, año 2021\n",
-      "Listo!\n",
-      "2021_08 listo\n",
-      "Descargando mes 09, año 2021\n",
-      "Listo!\n",
-      "2021_09 listo\n",
-      "Descargando mes 10, año 2021\n",
-      "Listo!\n",
-      "2021_10 listo\n",
-      "Descargando mes 11, año 2021\n",
-      "Listo!\n",
-      "2021_11 listo\n",
-      "Descargando mes 12, año 2021\n",
-      "Listo!\n",
-      "2021_12 listo\n",
-      "Descargando mes 01, año 2022\n",
-      "Listo!\n",
-      "2022_01 listo\n",
-      "Descargando mes 02, año 2022\n",
-      "Listo!\n",
-      "2022_02 listo\n",
-      "Descargando mes 03, año 2022\n",
-      "Listo!\n",
-      "2022_03 listo\n",
-      "Descargando mes 04, año 2022\n",
-      "Listo!\n",
-      "2022_04 listo\n",
-      "Descargando mes 05, año 2022\n",
-      "Listo!\n",
-      "2022_05 listo\n",
-      "Descargando mes 06, año 2022\n",
-      "Listo!\n",
-      "2022_06 listo\n",
-      "Descargando mes 07, año 2022\n",
-      "Listo!\n",
-      "2022_07 listo\n",
-      "Descargando mes 08, año 2022\n",
-      "Listo!\n",
-      "2022_08 listo\n",
-      "Descargando mes 09, año 2022\n",
-      "Listo!\n",
-      "2022_09 listo\n",
-      "Descargando mes 10, año 2022\n",
-      "Listo!\n",
-      "2022_10 listo\n",
-      "Descargando mes 11, año 2022\n",
-      "Listo!\n",
-      "2022_11 listo\n",
-      "Descargando mes 12, año 2022\n",
-      "Listo!\n",
-      "2022_12 listo\n",
-      "Descargando mes 01, año 2023\n",
-      "Listo!\n",
-      "2023_01 listo\n",
-      "Descargando mes 02, año 2023\n",
-      "Listo!\n",
-      "2023_02 listo\n",
-      "Descargando mes 03, año 2023\n",
-      "Listo!\n",
-      "2023_03 listo\n",
-      "Descargando mes 04, año 2023\n",
-      "Listo!\n",
-      "2023_04 listo\n",
-      "Descargando mes 05, año 2023\n",
-      "Listo!\n",
-      "2023_05 listo\n",
-      "Descargando mes 06, año 2023\n",
-      "Listo!\n",
-      "2023_06 listo\n",
-      "Descargando mes 07, año 2023\n",
-      "Listo!\n",
-      "2023_07 listo\n",
-      "Descargando mes 08, año 2023\n",
-      "Listo!\n",
-      "2023_08 listo\n",
-      "Descargando mes 09, año 2023\n",
-      "Listo!\n",
-      "2023_09 listo\n",
-      "Descargando mes 10, año 2023\n",
-      "Listo!\n",
-      "2023_10 listo\n",
-      "Descargando mes 11, año 2023\n",
-      "Listo!\n",
-      "2023_11 listo\n",
-      "Descargando mes 12, año 2023\n",
-      "Listo!\n",
-      "2023_12 listo\n",
-      "Descargando mes 01, año 2024\n",
-      "Listo!\n",
-      "2024_01 listo\n",
-      "Descargando mes 02, año 2024\n",
-      "Listo!\n",
-      "2024_02 listo\n",
-      "Descargando mes 03, año 2024\n",
-      "Listo!\n",
-      "2024_03 listo\n",
-      "Descargando mes 04, año 2024\n",
-      "Listo!\n",
-      "2024_04 listo\n",
-      "Descargando mes 05, año 2024\n",
-      "Listo!\n",
-      "2024_05 listo\n"
+      "Descargando mes 07, año 2009\n"
      ]
     }
    ],
@@ -757,7 +221,7 @@
     "    m = f\"{mm:02d}\"\n",
     "    scrap(y, m, b)\n",
     "    desde = r\"C:/Users/Martin/Downloads/\" + file_name\n",
-    "    hacia = r\"C:/Users/Martin/Desktop/Python/TAC/\" + f\"{y}{m}_TAC_CMF.xls\" \n",
+    "    hacia = r\"C:/Users/Martin/Desktop/Python/Python-TAC-CMF/TAC/\" + f\"{y}{m}_TAC_CMF.xls\" \n",
     "    os.rename(desde, hacia) #mandamos archivo desde carpeta default descargas Chrome a carpeta en que queremos los archivos\n",
     "    print(f\"{y}_{m} listo\")\n",
     "\n",
@@ -766,12 +230,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the directory path\n",
-    "path = \".\\\\TAC\"\n",
+    "path = \".\\\\TAC\\\\Python-TAC-CMF\"\n",
     "\n",
     "# List all files in the directory\n",
     "tac_list = os.listdir(path)\n",
